--- a/styles/main.css
+++ b/styles/main.css
@@ -2,9 +2,13 @@
 
 :root {
     --font-m: "Montserrat", sans-serif;
-    --font-n: "Montserrat", sans-serif;
+    --font-n: "Noto Sans Hebrew", sans-serif;
     --light-blue: #9ee6ff;
     --blue: #00739c;
+    --yellow: #fdb933;
+    --grey: #565656;
+    --light-grey: #d9d9d933;
+    --medium-grey: #858585;
 }
 
 html {
@@ -29,8 +33,9 @@ body {
 .ms-swiper-btn {
     position: absolute;
     top: 50%;
-    transform: translate(0, -50%);
+    transform: translate(0, calc(-50% - 30px));
     cursor: pointer;
+    z-index: 1;
 }
 
 .ms-swiper-prev {
@@ -157,5 +162,117 @@ body {
 
 .ms-aside-link-transparent {
     background: #fff;
-    border: 1px solid #00769E1A;
+    border: 1px solid #00769e1a;
+}
+
+.ms-head {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+
+.ms-title-link {
+    aspect-ratio: 1 / 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 42px;
+    width: 100%;
+    background: var(--yellow);
+    border-radius: 50%;
+}
+
+.ms-title {
+    font: 800 38px/1 var(--font-n);
+    color: var(--grey);
+    padding: 20px 0;
+    position: relative;
+}
+
+.ms-title::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    width: 48px;
+    height: 5px;
+    background: var(--blue);
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.ms-title strong {
+    color: var(--blue);
+}
+
+.ms-section-grey {
+    background: var(--light-grey);
+}
+
+.ms-container {
+    max-width: 1240px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.ms-swiper {
+    padding-bottom: 60px !important;
+    position: relative;
+    overflow: hidden;
+}
+
+.ms-swiper-pagination {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.ms-swiper-pagination .swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    background: #00739C66;
+    opacity: 1;
+}
+
+.ms-swiper-pagination .swiper-pagination-bullet-active {
+    background: var(--blue);
+}
+
+.ms-news-card {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.ms-news-card-img {
+    aspect-ratio: 18/13;
+    width: 100%;
+    border-radius: 15px;
+}
+
+.ms-news-card-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ms-news-card-title {
+    color: var(--grey);
+    font: 700 20px/1 var(--font-m);
+}
+
+.ms-news-card-date {
+    font:  500 16px/1 var(--font-m);
+    color: var(--medium-grey);
+}
+
+.ms-news-card-link {
+    display: flex;  
+    align-items: center;
+    gap: 10px;
+    color: var(--blue);
+    font: 600 16px/1 var(--font-m);
 }
