--- a/styles/main.css
+++ b/styles/main.css
@@ -233,7 +233,7 @@ body {
 .ms-swiper-pagination .swiper-pagination-bullet {
     width: 10px;
     height: 10px;
-    background: #00739C66;
+    background: #00739c66;
     opacity: 1;
 }
 
@@ -241,7 +241,8 @@ body {
     background: var(--blue);
 }
 
-.ms-news-card {
+.ms-news-card,
+.ms-video-card {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -253,26 +254,95 @@ body {
     border-radius: 15px;
 }
 
-.ms-news-card-head {
+.ms-news-card-head,
+.ms-video-card-head {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.ms-news-card-title {
+.ms-news-card-title,
+.ms-video-card-title {
     color: var(--grey);
     font: 700 20px/1 var(--font-m);
 }
 
-.ms-news-card-date {
-    font:  500 16px/1 var(--font-m);
+.ms-news-card-date,
+.ms-video-card-date {
+    font: 500 16px/1 var(--font-m);
     color: var(--medium-grey);
 }
 
 .ms-news-card-link {
-    display: flex;  
+    display: flex;
     align-items: center;
     gap: 10px;
     color: var(--blue);
     font: 600 16px/1 var(--font-m);
+}
+
+.ms-video-card-img-container {
+    position: relative;
+    border-radius: 15px;
+    overflow: hidden;
+    height: 460px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ms-video-card-img-container::before {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    left: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #003d5280;
+}
+
+.ms-video-card-img {
+    height: 100%;
+}
+
+.swiper-main-video {
+    padding: 0 20px;
+}
+
+.ms-video-card-play-container {
+    position: absolute;
+    cursor: pointer;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75px;
+    height: 75px;
+    border: 1px solid #ffffff1a;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(3px);
+}
+
+.ms-video-card-play-container::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #ffffff;
+    border-radius: 50%;
+}
+
+.ms-video-card-play {
+    position: relative;
+    z-index: 1;
 }
