--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,3 +152,45 @@
     padding: 0 40px;
 }
 
+.main-helpful {
+    position: relative;
+    overflow: hidden;
+}
+
+.main-helpful__background {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+
+.main-helpful-cards {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-helpful-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px;
+    gap: 15px;
+}
+
+.main-helpful-text  {
+    text-align: center;
+    max-width: 100px;
+}
+
+.main-helpful-icon {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: var(--yellow);
+    border: 1px solid #fff;
+    box-shadow: 0px 4px 4px 0px #0000001A;
+}
