--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,20 @@
 .ms-home-preview {
     aspect-ratio: 16/9;
     width: 100%;
-    background-image: url("../img/c83d22e0a38c642c97a3255e76d9c6f72a158902.png");
     position: relative;
     display: flex;
     align-items: center;
 }
 
-.ms-home-preview::before {
+.home-preview__video {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.ms-home-preview::after {
     content: "";
     width: 100%;
     height: 100%;
@@ -26,6 +33,7 @@
     position: absolute;
     bottom: -2px;
     left: 0;
+    z-index: 1;
 }
 
 .home-preview-swiper {
@@ -148,7 +156,8 @@
     width: 100%;
 }
 
-.swiper-main-news, .swiper-main-articles {
+.swiper-main-news,
+.swiper-main-articles {
     padding: 0 40px;
 }
 
@@ -158,6 +167,7 @@
 }
 
 .main-helpful__background {
+    height: 100%;
     position: absolute;
     left: 0;
     top: 50%;
@@ -177,7 +187,7 @@
     gap: 15px;
 }
 
-.main-helpful-text  {
+.main-helpful-text {
     text-align: center;
     max-width: 100px;
 }
@@ -192,5 +202,19 @@
     border-radius: 50%;
     background: var(--yellow);
     border: 1px solid #fff;
-    box-shadow: 0px 4px 4px 0px #0000001A;
+    box-shadow: 0px 4px 4px 0px #0000001a;
+}
+
+.ms-news-card,
+.ms-video-card {
+    opacity: 0.2;
+}
+
+.ms-news-card.swiper-slide-active,
+.ms-news-card.swiper-slide-next,
+.ms-news-card.swiper-slide-next + *,
+.ms-video-card.swiper-slide-active,
+.ms-video-card.swiper-slide-next,
+.ms-video-card.swiper-slide-next + *, .ms-video-card.swiper-slide-next + * + * {
+    opacity: 1;
 }
