--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,26 @@
 .ms-home-preview {
-    aspect-ratio: 16/9;
+    height: 100vh;
     width: 100%;
     position: relative;
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 
 .home-preview__video {
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+
+.home-preview__video.active {
+    opacity: 1;
 }
 
 .ms-home-preview::after {
@@ -225,7 +234,6 @@
 .ms-video-card.swiper-slide-next + * + * {
     opacity: 1;
 }
-
 
 .ms-video-card.swiper-slide-active,
 .ms-video-card.swiper-slide-next,
