--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,6 +213,11 @@
     background: var(--yellow);
     border: 1px solid #fff;
     box-shadow: 0px 4px 4px 0px #0000001a;
+    transition: transform 0.4s ease-out;
+}
+
+.main-helpful-card:hover .main-helpful-icon {
+    transform: rotateY(180deg);
 }
 
 .ms-news-card,
